fixed alignment issues / Added onClick function

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 
 
 .form--input {
-    width: 30%;
+    width: 40%;
     height: 45px;
     margin-top: 60px;
     border: 2px solid #D5D4D8;
@@ -23,13 +23,14 @@ body {
 
 .form--button {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
     color: #fff;
-    width: 70%;
+    width: 50%;
     height: 50px;
     margin-top: 50px;
+    margin-left: 22%;
     border-radius: 1em;
     font-family: "Karla", sans-serif;
     
